--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@astrojs/check": "0.5.5",
+    "@fontsource/iosevka": "5.0.7",
+    "@fontsource/roboto": "5.0.8",
     "astro": "4.4.1",
+    "rehype-slug": "6.0.0",
+    "rehype-autolink-headings": "7.1.0",
     "typescript": "5.3.3"
   },
   "devDependencies": {
