--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@astrojs/check": "0.5.5",
+    "@astrojs/sitemap": "3.1.1",
     "@fontsource/iosevka": "5.0.7",
     "@fontsource/roboto": "5.0.8",
     "astro": "4.4.1",
-    "rehype-slug": "6.0.0",
     "rehype-autolink-headings": "7.1.0",
+    "rehype-slug": "6.0.0",
     "typescript": "5.3.3"
   },
   "devDependencies": {
