--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "0.5.10",
+    "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "3.1.4",
     "@fontsource/inter": "5.0.18",
     "@fontsource/iosevka": "5.0.11",
