--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "fmt": "prettier --write . --plugin=prettier-plugin-astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.5.10",
+    "@astrojs/check": "^0.5.10",
     "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "3.1.4",
-    "@fontsource/inter": "5.0.18",
-    "@fontsource/iosevka": "5.0.11",
-    "astro": "4.7.0",
-    "reading-time": "1.5.0",
-    "rehype-autolink-headings": "7.1.0",
-    "rehype-slug": "6.0.0",
-    "typescript": "5.4.5"
+    "@astrojs/sitemap": "^3.1.4",
+    "@fontsource/inter": "^5.0.18",
+    "@fontsource/iosevka": "^5.0.11",
+    "astro": "^4.7.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "7.7.1",
-    "eslint": "8.57.0",
-    "eslint-plugin-astro": "1.0.3",
-    "prettier": "3.2.5",
-    "prettier-plugin-astro": "0.13.0"
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-astro": "^1.0.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
