--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/inter": "^5.0.18",
     "@fontsource/iosevka": "^5.0.11",
     "astro": "^4.7.0",
+    "astro-icon": "^1.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
