--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
+    "sharp": "^0.33.4",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
