--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@iconify-json/simple-icons": "^1.2.7",
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^9.12.0",
     "eslint-plugin-astro": "^1.3.0",
