--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "fmt": "prettier --write . --plugin=prettier-plugin-astro"
+    "format": "prettier --write . --plugin=prettier-plugin-astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.3.0",
     "@fontsource-variable/inter": "^5.2.5",
     "@fontsource/iosevka": "^5.2.5",
+    "@iconify-json/simple-icons": "^1.2.29",
     "astro": "^5.5.3",
     "astro-icon": "^1.1.5",
     "reading-time": "^1.5.0",
@@ -25,7 +26,6 @@
     "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "@iconify-json/simple-icons": "^1.2.29",
     "@typescript-eslint/parser": "^8.27.0",
     "eslint": "^9.22.0",
     "eslint-plugin-astro": "^1.3.1",
