--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write . --plugin=prettier-plugin-astro"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/svelte": "^7.0.6",
     "@fontsource-variable/inter": "^5.2.5",
     "@fontsource/iosevka": "^5.2.5",
     "@iconify-json/simple-icons": "^1.2.29",
@@ -23,6 +24,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "sharp": "^0.33.5",
+    "svelte": "^5.23.2",
     "typescript": "^5.8.2"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-astro": "^1.3.1",
     "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-svelte": "^3.3.3"
   }
 }
